Fix the poker chip looking blurry when zoomed in Safari

--- a/components/MintChip/styles.module.scss
+++ b/components/MintChip/styles.module.scss
@@ -19,6 +19,25 @@
   image-rendering: -moz-crisp-edges;
 }
 
+// Safari only.
+@media not all and (min-resolution:.001dpcm) {
+  @supports (-webkit-appearance:none) {
+    .back img {
+      transform: translateZ(0);
+    }
+
+    .back .safari_blurry_text_fix {
+      position: absolute;
+      left: -450%;
+      right: -450%;
+      top: -450%;
+      bottom: -450%;
+      transform: scale(0.1);
+      font-size: 1000%;
+    }
+  }
+}
+
 .content {
   display: flex;
   align-items: center;
@@ -26,7 +45,7 @@
   flex-direction: column;
 
   .mint {
-    font-size: 1.6rem;
+    font-size: 1.6em;
     font-family: Georgia, sans-serif;
   }
 
@@ -35,7 +54,7 @@
   }
 
   .price {
-    font-size: 1.2rem;
+    font-size: 1.2em;
     font-family: Times, sans-serif;
     color: green;
   }
